Child elements changed to display as block elements to prevent overlap when viewport is smallest.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,7 +73,8 @@ nav a {
 .child {
 	float: left;
 	width: 33%;
-	padding: 10px;
+	margin: 10px;
+	display: block;
 	
 }
 
